[gd_scene load_steps=5 format=2]

[ext_resource path="res://title_scene/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GamePopupMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.936188
margin_right = -0.936157

[node name="Button" type="Button" parent="."]
margin_right = 22.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 1 )
text = "||"

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_top = -20.0
margin_right = 20.0
script = ExtResource( 2 )

[node name="ResumeButton" type="Button" parent="PopupMenu"]
margin_left = 280.0
margin_top = 120.0
margin_right = 361.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="ResetButton" type="Button" parent="PopupMenu"]
margin_left = 280.0
margin_top = 147.0
margin_right = 361.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "Reset"

[node name="SaveButton" type="Button" parent="PopupMenu"]
margin_left = 280.0
margin_top = 174.0
margin_right = 361.0
margin_bottom = 201.0
custom_fonts/font = SubResource( 2 )
text = "Save"

[node name="MenuButton" type="Button" parent="PopupMenu"]
margin_left = 280.0
margin_top = 201.0
margin_right = 361.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="ExitButton" type="Button" parent="PopupMenu"]
margin_left = 280.0
margin_top = 228.0
margin_right = 361.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 2 )
text = "Exit"
[connection signal="pressed" from="Button" to="PopupMenu" method="_on_Button_pressed"]
[connection signal="pressed" from="PopupMenu/ResumeButton" to="PopupMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PopupMenu/ResetButton" to="PopupMenu" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="PopupMenu/SaveButton" to="PopupMenu" method="_on_SaveButton_pressed"]
[connection signal="pressed" from="PopupMenu/MenuButton" to="PopupMenu" method="_on_MenuButton_pressed"]
[connection signal="pressed" from="PopupMenu/ExitButton" to="PopupMenu" method="_on_ExitButton_pressed"]
